[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
color-eyre = "0.6.5"
geo = "0.31.0"
srtm_reader = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "ansi"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.22.0"
