[package]
name = "tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
geo = "0.31.0"
geojson = { version = "0.24.2", features = ["geo-types"] }
proj4rs = { version = "0.1.9", features = ["aeqd"] }
rstar = "0.12.2"
serde = "1.0.219"
serde_json = "1.0.143"
srtm_reader = "0.5.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "ansi"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.22.0"
